Sezioni main completata

--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
                     </div>
                 </div>
 
+                <div class="spoty-mix">
+                    <h2>Creato per John Do</h2>
+                    <h3>Più ascolti, più accurati saranno i suggerimenti</h3>
+                    <div class="spoty-collection">
+                        <div class="spoty-yours"></div>
+                        <div class="spoty-yours"></div>
+                    </div>
+                </div>
+
+                <div class="spoty-artist">
+                    <h2>Artisti più popolari</h2>
+                    <h3>Più ascolti, più accurati saranno i suggerimenti</h3>
+                    <div class="spoty-name">
+                        <div class="spoty-face"></div>
+                        <div class="spoty-face"></div>
+
+
+                    </div>
+                </div>
+
                 
             </section>
         </div>
