blocchi Side Bar inseriti

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <main>
         <div class="big-container">
             <section class="Side-bar">
+                <div class="side-up">
+                    <div class="logo"></div>
+                    <div class="side-features"></div>
+                    <div class="side-Playlist"></div>
+
+                </div>
+
+                <div class="side-down">
+                    <div class="side-profile"></div>
+
+                </div>
 
             </section>
 
