blocchi footer inseriti

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 
     <footer>
         <div class="footer-container">
+            <div class="footer-left"></div>
+            <div class="footer-middle"></div>
+            <div class="footer-right"></div>
+
 
         </div>
 
