Desktop first ultimata

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <!-- fine side bar -->
 
             <section class="Spoty-body">
+                <div class="spoty-upgrade">
+                    <div class="button-upgrade">
+                        Effettua l'upgrade
+                    </div>
+                </div>
                 <div class="spoty-selection">
                     <ul>
                         <li>IN EVIDENZA</li>
