Prima prova fix album

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>html-css-spotifyweb</title>
 </head>
+
 <body>
     <main>
         <div class="big-container">
@@ -46,9 +48,19 @@
                 <div class="spoty-songs">
                     <h2>Recently played</h2>
                     <div class="spoty-list">
-                        <div class="spoty-album">
-                            <img src="" alt="">
-                            <h3></h3>
+                        <div class="spoty-object">
+                            <div class="spoty-album">
+                                <img src="" alt="">
+
+                            </div>
+                            <div class="album-name">
+                                <h3>Mix playlist</h3>
+
+                            </div>
+                            <div class="album-artist">
+                                <p>Lorem art</p>
+
+                            </div>
                         </div>
                         <div class="spoty-album">
                             <img src="" alt="">
@@ -93,7 +105,7 @@
                     </div>
                 </div>
 
-                
+
             </section>
         </div>
 
@@ -109,6 +121,7 @@
         </div>
 
     </footer>
-    
+
 </body>
+
 </html>
