inserimento immagini Main

--- a/index.html
+++ b/index.html
@@ -170,9 +170,26 @@
                     <h3>Più ascolti, più accurati saranno i suggerimenti</h3>
                     <div class="spoty-name">
                         <div class="spoty-face">
-                            
+                            <div class="spoty-photo">
+                                <img src="img/youg.jpeg" alt="">
+
+                            </div>
+
+                            <div class="singer">
+                                <h3>Young</h3>
+                                <p>New song</p>
+                            </div>
+
                         </div>
                         <div class="spoty-face">
+                            <div class="spoty-photo">
+                                <img src="img/einaudi.jpeg" alt="">
+
+                            </div>
+                            <div class="singer">
+                                <h3>Einaudi</h3>
+                                <p>Pianist</p>
+                            </div>
 
                         </div>
 
