--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>html-css-spotifyweb</title>
+
+    <!-- Link FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -48,16 +51,31 @@
                             
                         </div>
 
-                        <div class="search">
-
+                        
+                    </div>
+                    <div class="side-Playlist">
+                        <h2>PLAYLIST</h2>
+                        <div class="container-playlist">
+                            <span><i class="fa-solid fa-plus add-playlist"></i> Crea al tua Playlist</span>
+                            <ul>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="side-Playlist"></div>
 
                 </div>
 
                 <div class="side-down">
-                    <div class="side-profile"></div>
+                    <div class="side-profile">
+                        <span>Installa app</span>
+                    </div>
 
                 </div>
 
