Desktop first completato

--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
 
                 <div class="side-down">
                     <div class="side-profile">
-                        <span>Installa app</span>
+                        <span class="install"><img src="img/download.svg" alt="">Installa app</span>
+                        <hr>
+                        <div class="shape">
+                            <img src="img/profile.svg" alt="">
+                            <h2>John Doe</h2>
+                        </div>
                     </div>
 
                 </div>
