--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <div class="side-down">
                     <div class="side-profile">
-                        <span class="install"><img src="img/download.svg" alt="">Installa app</span>
+                        <span class="install"><img src="img/download.svg" alt=""><span class="install-text">Installa app</span></span>
                         <hr>
                         <div class="shape">
                             <img src="img/profile.svg" alt="">
