--- a/index.html
+++ b/index.html
@@ -265,8 +265,38 @@
 
     <footer>
         <div class="footer-container">
-            <div class="footer-left"></div>
-            <div class="footer-middle"></div>
+            <div class="footer-left">
+                <div class="song">
+                    <div class="song-photo">
+                        <img src="img/sinister.jpeg" alt="">
+                    </div>
+                    <div class="name-song">
+                        <span class="Name">Sinister</span>
+                        <span class="Description-Name">Brano Nome</span>
+                    </div>
+
+                </div>
+                <div class="icon-song">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+            <div class="footer-middle">
+                <div class="up-middle">
+                    <div class="icon-left">
+                        <i class="fa-solid fa-shuffle"></i>
+                        <i class="fa-solid fa-backward-step"></i>
+                    </div>
+                    <div class="icon-middle">
+                        <i class="fa-regular fa-circle-play"></i>
+                    </div>
+                    <div class="icon-right">
+                        <i class="fa-solid fa-forward-step"></i>
+                        <i class="fa-solid fa-rotate-left"></i>
+                    </div>
+                </div>
+                <div class="down-middle"></div>
+            </div>
             <div class="footer-right"></div>
 
 
