Esercizio completato mancano gli hover

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 <img src="img/home.svg" alt="">
 
                             </div>
-                            <div class="text-home">
+                            <div class="text-home texthide">
                                 <p>Home</p>
                             </div>
                             
@@ -295,9 +295,24 @@
                         <i class="fa-solid fa-rotate-left"></i>
                     </div>
                 </div>
-                <div class="down-middle"></div>
+                <div class="down-middle">
+                    <div class="time-song">
+                        <span>0.45</span>
+                    </div>
+                    <div class="duration">
+                        
+                    </div>
+                    <div class="time-song">
+                        <span>4.35</span>
+                    </div>
+                </div>
             </div>
-            <div class="footer-right"></div>
+            <div class="footer-right">
+                <i class="fa-solid fa-list-ul"></i>
+                <i class="fa-solid fa-display"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="duration"></div>
+            </div>
 
 
         </div>
