--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                         <div class="spoty-object">
                             <div class="spoty-album">
                                 <img src="img/metal_lifting.jpg" alt="">
+                                <i class="fa-regular fa-circle-play play-stop"></i>
 
                             </div>
                             <div class="album-name">
@@ -126,6 +127,8 @@
                         <div class="spoty-object">
                             <div class="spoty-album">
                                 <img src="img/stranger.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play play-stop"></i>
+
 
                             </div>
                             <div class="album-name">
@@ -140,6 +143,8 @@
                         <div class="spoty-object">
                             <div class="spoty-album">
                                 <img src="img/aquietplace.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play play-stop"></i>
+
 
                             </div>
                             <div class="album-name">
@@ -154,6 +159,8 @@
                         <div class="spoty-object">
                             <div class="spoty-album">
                                 <img src="img/split.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play play-stop"></i>
+
 
                             </div>
                             <div class="album-name">
@@ -168,6 +175,8 @@
                         <div class="spoty-object">
                             <div class="spoty-album">
                                 <img src="img/cure.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play play-stop"></i>
+
 
                             </div>
                             <div class="album-name">
@@ -182,6 +191,8 @@
                         <div class="spoty-object">
                             <div class="spoty-album">
                                 <img src="img/sinister.jpeg" alt="">
+                                <i class="fa-regular fa-circle-play play-stop"></i>
+
 
                             </div>
                             <div class="album-name">
